--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
         </div>
         <div class="social-icon-container">
-            <a href="https://t.me/yourprofile" target="_blank">
+            <a href="https://t.me/bayindirmedya" target="_blank">
                 <img src="telegram-icon.png" alt="Telegram" class="social-icon">
             </a>
         </div>
